# Airplane-Model

./: README.md  pyproject.toml
airline_ticketing/: hooks.py  modules.txt
airline_ticketing/airline_ticketing/doctype/airline/: airline.js  airline.json  airline.py  test_airline.py
airline_ticketing/airline_ticketing/doctype/airplane/: airplane.js  airplane.json  airplane.py  test_airplane.py
airline_ticketing/airline_ticketing/doctype/airplane_flight/: airplane_flight.js  airplane_flight.json  airplane_flight.py  test_airplane_flight.py
airline_ticketing/airline_ticketing/doctype/airplane_ticket/: airplane_ticket.js  airplane_ticket.json  airplane_ticket.py  test_airplane_ticket.py
airline_ticketing/airline_ticketing/doctype/airplane_ticket_add_on_item/: airplane_ticket_add_on_item.json  airplane_ticket_add_on_item.py
airline_ticketing/airline_ticketing/doctype/airplane_ticket_add_on_type/: airplane_ticket_add_on_type.js  airplane_ticket_add_on_type.json  airplane_ticket_add_on_type.py  test_airplane_ticket_add_on_type.py
airline_ticketing/airline_ticketing/doctype/airport/: airport.js  airport.json  airport.py  test_airport.py
airline_ticketing/airline_ticketing/doctype/flight_crew_member/: flight_crew_member.js  flight_crew_member.json  flight_crew_member.py  test_flight_crew_member.py
airline_ticketing/airport_shop_management/doctype/shop/: shop.js  (+3 more)
airline_ticketing/fixtures/: shop_type.json
airline_ticketing/public/: shop.css
airline_ticketing/public/css/: shop.css
airline_ticketing/templates/pages/: shops.html  shops.py  show-me.html
(+41 files in other folders)
